--- a/lstm-char-cnn.ipynb
+++ b/lstm-char-cnn.ipynb
@@ -66,11 +66,12 @@
     "            # [batch_size x max_word_length, num_unroll_steps, char_embed_size]\n",
     "            input_embedded = tf.nn.embedding_lookup(self.char_embedding, input_)\n",
     "            input_embedded = tf.reshape(input_embedded, [-1, self.max_word_length, self.char_embed_size])\n",
-    "        input_cnn = self.tdnn(input_embedded, self.kernels, self.kernel_features)\n",
+    "            input_cnn = self.tdnn(input_embedded, self.kernels, self.kernel_features)\n",
     "        ''' Maybe apply Highway '''\n",
     "#             if num_highway_layers > 0:\n",
-    "        assert self.num_highway_layers > 0\n",
-    "        input_cnn = self.highway(input_cnn, input_cnn.get_shape()[-1], num_layers=self.num_highway_layers, scope=\"CNN_OUT\")\n",
+    "            assert self.num_highway_layers > 0\n",
+    "            input_cnn = self.highway(input_cnn, input_cnn.get_shape()[-1], num_layers=self.num_highway_layers, scope=\"CNN_OUT\")\n",
+    "            \n",
     "        return input_cnn\n",
     "    \n",
     "    def conv2d(self, input_, output_dim, k_h, k_w, name=\"conv2d\"):\n",
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -133,20 +134,20 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0815 19:56:43.344120 139842992813888 deprecation_wrapper.py:119] From /home/hadoop/ERD/model.py:3: The name tf.losses.Reduction is deprecated. Please use tf.compat.v1.losses.Reduction instead.\n",
+      "W0817 10:48:16.461925 139817561323328 deprecation_wrapper.py:119] From /home/hadoop/ERD/model.py:3: The name tf.losses.Reduction is deprecated. Please use tf.compat.v1.losses.Reduction instead.\n",
       "\n",
       "Using TensorFlow backend.\n",
-      "W0815 19:56:43.389121 139842992813888 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "W0817 10:48:16.513915 139817561323328 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n",
-      "W0815 19:56:43.389778 139842992813888 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "W0817 10:48:16.514591 139817561323328 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
       "\n",
-      "W0815 19:56:43.391288 139842992813888 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "W0817 10:48:16.516207 139817561323328 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
       "\n",
-      "W0815 19:56:44.056740 139842992813888 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "W0817 10:48:17.262377 139817561323328 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
       "\n",
-      "W0815 19:56:44.083391 139842992813888 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:174: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+      "W0817 10:48:17.289242 139817561323328 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:174: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
       "\n",
-      "W0815 19:56:44.083859 139842992813888 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:181: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+      "W0817 10:48:17.290433 139817561323328 deprecation_wrapper.py:119] From /home/hadoop/.conda/envs/TF/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:181: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
       "\n"
      ]
     },
@@ -192,6 +193,76 @@
     "\n",
     "train_reader =PTB_data_reader.DataReader(word_tensors['train'], char_tensors['train'],\n",
     "                              FLAGS.batch_size, FLAGS.max_sent_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' ',\n",
+       " '{',\n",
+       " '}',\n",
+       " 'a',\n",
+       " 'e',\n",
+       " 'r',\n",
+       " 'b',\n",
+       " 'n',\n",
+       " 'k',\n",
+       " 'o',\n",
+       " 't',\n",
+       " 'l',\n",
+       " 'i',\n",
+       " 'z',\n",
+       " 'c',\n",
+       " 'w',\n",
+       " 'y',\n",
+       " 'u',\n",
+       " 's',\n",
+       " 'f',\n",
+       " 'm',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'd',\n",
+       " '-',\n",
+       " 'q',\n",
+       " 'p',\n",
+       " 'x',\n",
+       " '+',\n",
+       " '|',\n",
+       " 'N',\n",
+       " 'j',\n",
+       " 'v',\n",
+       " '.',\n",
+       " \"'\",\n",
+       " '1',\n",
+       " '9',\n",
+       " '5',\n",
+       " '0',\n",
+       " '&',\n",
+       " '$',\n",
+       " '3',\n",
+       " '2',\n",
+       " '4',\n",
+       " '8',\n",
+       " '6',\n",
+       " '7',\n",
+       " '#',\n",
+       " '\\\\',\n",
+       " '/',\n",
+       " '*']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "char_vocab._index2token"
    ]
   },
   {
