--- a/SentCNN.ipynb
+++ b/SentCNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,20 @@
     "        feature_map = tf.relu(conv_input) # [batchsize, conv_feats, filters]\n",
     "        self.pooled_feat = tf.reduce_max(feature_map, 1)\n",
     "        classifier = tf.layers.Dense(3, activation= tf.nn.relu, trainable=True)\n",
-    "        self.pred_scores = tf.nn.softmax(classifier(self.pooled_feat), axis=1)\n",
-    "        self.loss = "
+    "        self.pred_scores = classifier(self.pooled_feat)\n",
+    "        self.loss = tf.losses.softmax_cross_entropy(\n",
+    "    self.input_y,\n",
+    "    self.pred_scores,\n",
+    "    weights=1.0,\n",
+    "    label_smoothing=0,\n",
+    "    scope=None,\n",
+    "    loss_collection=tf.GraphKeys.LOSSES \n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,22 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.5441906 , 0.8318912 , 0.8160324 , 0.8752522 , 0.9409457 ,\n",
-       "        0.8530572 , 0.72460777, 0.9465967 , 0.9013317 , 0.78937036],\n",
-       "       [0.9271213 , 0.93437266, 0.46446687, 0.37157094, 0.8782632 ,\n",
-       "        0.64659   , 0.97321266, 0.88701713, 0.915626  , 0.96424925],\n",
-       "       [0.87826717, 0.9834535 , 0.86942923, 0.5453663 , 0.7001107 ,\n",
-       "        0.9066905 , 0.7738614 , 0.8551436 , 0.93513906, 0.97188175]],\n",
+       "array([[0.80458635, 0.77087307, 0.72253996, 0.65073276, 0.7551314 ,\n",
+       "        0.83436346, 0.89131194, 0.6152131 , 0.9187489 , 0.9580402 ],\n",
+       "       [0.8392782 , 0.96472466, 0.9425624 , 0.92444646, 0.92648566,\n",
+       "        0.7616283 , 0.98676044, 0.99242675, 0.8579236 , 0.929951  ],\n",
+       "       [0.90843916, 0.908455  , 0.88483137, 0.94633716, 0.8346903 ,\n",
+       "        0.9009754 , 0.69429547, 0.8504787 , 0.6619101 , 0.552041  ]],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,16 +81,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0731 16:31:33.525002 4601943488 deprecation.py:506] From /Users/lumenglong/anaconda3/envs/TF/lib/python3.7/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
+     ]
+    }
+   ],
    "source": [
     "dd = d(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,18 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.       , 0.       , 1.4736935],\n",
-       "       [0.       , 0.       , 1.5519841],\n",
-       "       [0.       , 0.       , 1.9040263]], dtype=float32)"
+       "array([[1.6946235, 0.660918 , 0.       ],\n",
+       "       [1.8199023, 0.7351316, 0.       ],\n",
+       "       [1.7186108, 0.3424124, 0.       ]], dtype=float32)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,49 +133,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.15710106, 0.15710106, 0.68579787],\n",
-       "       [0.14879121, 0.14879121, 0.7024176 ],\n",
-       "       [0.11477277, 0.11477277, 0.77045447]], dtype=float32)"
+       "array([[0.64962274, 0.23106207, 0.11931515],\n",
+       "       [0.6666574 , 0.22531639, 0.10802621],\n",
+       "       [0.69839627, 0.17637075, 0.125233  ]], dtype=float32)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sess.run(tf.nn.softmax(dd, axis=1), feed_dict={ipt_x:rm})"
+    "sess.run(, feed_dict={ipt_x:rm})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = tf.constant([[1,0,0],[0,1,0], [1,0,0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = tf.nn.softmax(dd, axis=1)\n",
+    "a_pred = sess.run(pred, feed_dict={ipt_x:rm})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.losses import Reduction\n",
+    "loss = tf.losses.softmax_cross_entropy(\n",
+    "    l,\n",
+    "    dd,\n",
+    "    weights=1.0,\n",
+    "    label_smoothing=0,\n",
+    "    scope=None,\n",
+    "    loss_collection=tf.GraphKeys.LOSSES \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Cannot convert value (3, 3) to a TensorFlow DType.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-4c36c63c44ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/.conda/envs/TF/lib/python3.7/site-packages/tensorflow/python/framework/constant_op.py\u001b[0m in \u001b[0;36mconstant_v1\u001b[0;34m(value, dtype, shape, name, verify_shape)\u001b[0m\n\u001b[1;32m    178\u001b[0m   \"\"\"\n\u001b[1;32m    179\u001b[0m   return _constant_impl(value, dtype, shape, name, verify_shape=verify_shape,\n\u001b[0;32m--> 180\u001b[0;31m                         allow_broadcast=False)\n\u001b[0m\u001b[1;32m    181\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/TF/lib/python3.7/site-packages/tensorflow/python/framework/constant_op.py\u001b[0m in \u001b[0;36m_constant_impl\u001b[0;34m(value, dtype, shape, name, verify_shape, allow_broadcast)\u001b[0m\n\u001b[1;32m    282\u001b[0m       tensor_util.make_tensor_proto(\n\u001b[1;32m    283\u001b[0m           \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverify_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverify_shape\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 284\u001b[0;31m           allow_broadcast=allow_broadcast))\n\u001b[0m\u001b[1;32m    285\u001b[0m   \u001b[0mdtype_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mattr_value_pb2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAttrValue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtensor_value\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    286\u001b[0m   const_tensor = g.create_op(\n",
-      "\u001b[0;32m~/.conda/envs/TF/lib/python3.7/site-packages/tensorflow/python/framework/tensor_util.py\u001b[0m in \u001b[0;36mmake_tensor_proto\u001b[0;34m(values, dtype, shape, verify_shape, allow_broadcast)\u001b[0m\n\u001b[1;32m    427\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 429\u001b[0;31m     \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdtypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    430\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    431\u001b[0m   is_quantized = (\n",
-      "\u001b[0;32m~/.conda/envs/TF/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py\u001b[0m in \u001b[0;36mas_dtype\u001b[0;34m(type_value)\u001b[0m\n\u001b[1;32m    715\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    716\u001b[0m   raise TypeError(\"Cannot convert value %r to a TensorFlow DType.\" %\n\u001b[0;32m--> 717\u001b[0;31m                   (type_value,))\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: Cannot convert value (3, 3) to a TensorFlow DType."
+     "data": {
+      "text/plain": [
+       "0.7601939"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(loss, feed_dict={ipt_x:rm})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.4313635  -1.4650689  -2.1259868 ]\n",
+      " [-0.405479   -1.4902496  -2.2253814 ]\n",
+      " [-0.35896862 -1.7351669  -2.0775793 ]]\n"
      ]
     }
    ],
    "source": [
-    "l = tf.constant([1,0,0],(3,3))"
+    "a = np.log(a_pred)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.2805817"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0][0]+a[1][1]+a[2][0]"
    ]
   },
   {
